# ChangeLog for media-video/ffmpeg
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.163 2006/09/11 17:55:23 lu_zero Exp $

  11 Sep 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060816.ebuild:
  emake -j1 calls and add emake depend just in case

  08 Sep 2006; Rene Nussbaumer <killerfox@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Stable on hppa. See bug #133520.

  08 Sep 2006; Thomas Cort <tcort@gentoo.org> ffmpeg-0.4.9_p20060530.ebuild:
  Stable on alpha wrt security Bug #133520.

  08 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  ppc stable, bug #133520

  07 Sep 2006; Joshua Jackson <tsunam@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Stable x86; for security bug #133520

  07 Sep 2006; Thomas Cort <tcort@gentoo.org> ffmpeg-0.4.9_p20060530.ebuild:
  Stable on amd64.

  07 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Stable on sparc wrt #133520

  07 Sep 2006; Markus Rothe <corsair@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild:
  Stable on ppc64; bug #133520

  04 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  ffmpeg-0.4.9_p20060530.ebuild, ffmpeg-0.4.9_p20060816.ebuild:
  Export true as LDCONFIG value during install phases, so that it does not
  trigger sandbox on Gentoo/FreeBSD.

  30 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060816.ebuild:
  Fix multilib-strict and support EXTRA_ECONF

  17 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060816.ebuild:
  fix sdl dep

  16 Aug 2006; Luca Barbato <lu_zero@gentoo.org> ChangeLog:
  New version

  14 Aug 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/ffmpeg-0.4.9_p20060530-snow-mmx.patch,
  ffmpeg-0.4.9_p20060530.ebuild:
  Make snow compile on x86 with pic and mmx enabled at the same time, many
  thanks to Martin von Gagern <Martin.vGagern@gmx.net> for the patch and the
  overall help
