@@ -1,6 +1,10 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.163 2006/09/11 17:55:23 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.164 2006/10/03 13:03:15 lu_zero Exp $
+
+  03 Oct 2006; Luca Barbato <lu_zero@gentoo.org>
+  ffmpeg-0.4.9_p20060530.ebuild, ffmpeg-0.4.9_p20060816.ebuild:
+  Fix deps, see bug #134555
 
   11 Sep 2006; Luca Barbato <lu_zero@gentoo.org>
   ffmpeg-0.4.9_p20060816.ebuild:
